--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="navbar"><img src="20250615_121605.png" width="45px" height="45px" alt="image not available">
+        <div class="navbar">
+            <img src="20250615_121605.png" width="45px" height="45px" alt="image not available">
+       <h2>Smit's Todo app</h2>
         </div>
         </nav>
     <div class="todo-app">
